--- a/data/data.qrc
+++ b/data/data.qrc
@@ -158,6 +158,7 @@
         <file>2014/9/Disk_Tape_Usage.csv</file>
         <file>2014/9/reptier2.csv</file>
         <file>2014/9/TIER1_TIER1_sum_normcpu_TIER1_VO.csv</file>
+        <file>EventSize.csv</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
