--- a/data/data.qrc
+++ b/data/data.qrc
@@ -161,6 +161,10 @@
         <file>EventSize.csv</file>
         <file>2018/MandO.csv</file>
         <file>2018/pledges.csv</file>
+        <file>2017/1/CPU_Usage.csv</file>
+        <file>2017/1/Disk_Tape_Usage.csv</file>
+        <file>2017/1/reptier2.csv</file>
+        <file>2017/1/TIER1_TIER1_sum_normcpu_TIER1_VO.csv</file>
     </qresource>
     <qresource prefix="/"/>
 </RCC>
